# ferrotorch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.md  merge-swarm.sh  performance-parity.md  phase-0-orchestrator.md  phase-1-autograd-engine.md  phase-2-nn-modules.md  phase-7-distributed.md  phase-8-jit.md  pytorch-full-gap-analysis.md  pytorch-gap-analysis.md
ferrotorch/: Cargo.toml  README.md
ferrotorch-core/: Cargo.toml  README.md
ferrotorch-core/src/: bool_tensor.rs  complex_tensor.rs  cpu_pool.rs  creation.rs  device.rs  dispatch.rs  display.rs  dtype.rs  einops.rs  einsum.rs  error.rs  fft.rs  flex_attention.rs  gpu_dispatch.rs  inplace.rs  int_tensor.rs  lib.rs  linalg.rs  masked.rs  meta_propagate.rs  methods.rs  named_tensor.rs  nested.rs  numeric_cast.rs  ops_trait.rs  profiler_hook.rs  pruning.rs  quantize.rs  shape.rs  sparse.rs  special.rs  storage.rs  stride_tricks.rs  tensor.rs  vmap.rs
ferrotorch-core/tests/: _probe_963_bf16_elementwise_reductions.rs  _probe_966_fftn_axes_planmany.rs  _probe_b1_avgpool2d_ptx.rs  _probe_b1_batchnorm_forward.rs  _probe_b1_capture_stream.rs  _probe_b1_gelu_tanh_ptx.rs  _probe_b8_a1_noncontig_gpu_ops.rs  _probe_b8_a2_flex_attention_f64.rs  _probe_b9_higher_order_grad_shape1.rs  _probe_c3_bf16_mixed_prec.rs  _probe_c4_grad_fn_gpu.rs  _probe_narrow_gpu.rs  _probe_p2_spmm_cusparse.rs  _probe_p3_sparse_to_dense_from_dense.rs  _probe_p4_nested_to_padded_gpu.rs  _probe_p5_flash_attention_forward.rs  _probe_p6_sparse_matmul_24.rs  _probe_p7_csr_csc_conversions.rs  _probe_p8_packed_nested_sparse_grad.rs  conformance_autograd.rs  conformance_elementwise.rs  conformance_fft.rs  conformance_flex_attention.rs  conformance_linalg.rs  conformance_masked.rs  conformance_nested_sparse.rs  conformance_plumbing.rs  conformance_reduction.rs  conformance_shape.rs
ferrotorch-cubecl/: Cargo.toml  README.md
ferrotorch-cubecl/src/: grammar.rs  kernels.rs  lib.rs  ops.rs  quant.rs  runtime.rs  storage.rs
ferrotorch-cubecl/tests/: conformance_cubecl.rs  conformance_surface_coverage.rs
ferrotorch-data/: Cargo.toml  README.md
ferrotorch-data/src/: collate.rs  dataloader.rs  dataset.rs  interop.rs  lib.rs  sampler.rs  transforms.rs
ferrotorch-data/tests/: conformance_data_dataset.rs  conformance_data_loader.rs  conformance_data_sampler.rs  conformance_surface_coverage.rs  conformance_surface_inventory.rs
ferrotorch-diffusion/: Cargo.toml  README.md
ferrotorch-diffusion/examples/: clip_text_encode_dump.rs  unet_predict_dump.rs  unet_probe_dump.rs
ferrotorch-diffusion/src/: attention.rs  blocks.rs  lib.rs  resnet_block_time.rs  safetensors_loader.rs  time_embedding.rs  unet.rs  unet_config.rs  vae_encoder.rs
ferrotorch-diffusion/tests/: conformance_pretrained_diffusion.rs  conformance_vae_encoder.rs
ferrotorch-distributed/: Cargo.toml  README.md
ferrotorch-distributed/src/: async_collective.rs  backend.rs  checkpoint.rs  collective.rs  ddp.rs  device_mesh.rs  dtensor.rs  error.rs  fsdp.rs  gloo_backend.rs  gpu_collective.rs  lib.rs  mpi_backend.rs  nccl_backend.rs  nccl_collective.rs  nccl_sys.rs  p2p.rs  pipeline.rs  rpc.rs  sync_batch_norm.rs  ucc_backend.rs
ferrotorch-distributed/tests/: conformance_distributed.rs  conformance_surface_coverage.rs
ferrotorch-distributions/: Cargo.toml  README.md
ferrotorch-distributions/examples/: distributions_dump.rs
ferrotorch-distributions/src/: bernoulli.rs  beta.rs  categorical.rs  cauchy.rs  constraints.rs  dirichlet.rs  exponential.rs  fallback.rs  gamma.rs  gumbel.rs  half_normal.rs  kl.rs  kumaraswamy.rs  laplace.rs  lib.rs  lognormal.rs  low_rank_multivariate_normal.rs  mixture_same_family.rs  multinomial.rs  multivariate_normal.rs  normal.rs  one_hot_categorical.rs  pareto.rs  poisson.rs  relaxed_bernoulli.rs  relaxed_one_hot_categorical.rs  special_fns.rs  student_t.rs  transforms.rs  uniform.rs  von_mises.rs  weibull.rs
ferrotorch-distributions/tests/: conformance_distributions_continuous.rs  conformance_distributions_discrete.rs  conformance_surface_coverage.rs  conformance_torch_parity.rs
ferrotorch-gpu/: Cargo.toml  README.md  build.rs
ferrotorch-gpu/src/: allocator.rs  backend_impl.rs  bf16.rs  blas.rs  buffer.rs  conv.rs  cufft.rs  cusolver.rs  cusparselt.rs  device.rs  error.rs  flash_attention.rs  graph.rs  kernels.rs  lib.rs  memory_guard.rs  module_cache.rs  pool.rs  rng.rs  sparse.rs  stream.rs  tensor_bridge.rs  transfer.rs
ferrotorch-gpu/tests/: _probe_b1_ptx_jit.rs  _probe_backward_f64.rs  _probe_cummax_cummin_f64.rs  _probe_logcumsumexp_f64.rs  _probe_pow_f64.rs  _probe_prod_backward.rs  conformance_gpu_backend.rs  conformance_gpu_kernels.rs  conformance_gpu_lifecycle.rs  test_gpu_autograd.rs  test_gpu_channels_last.rs  test_gpu_clamp_backward.rs  test_gpu_eigh.rs  test_gpu_fft.rs  test_gpu_fft2.rs  test_gpu_graph_pool.rs  test_gpu_lstsq.rs  test_gpu_lu_factor.rs  test_gpu_masked.rs  test_gpu_matrix_norm.rs  test_gpu_prod.rs  test_gpu_solve_dev.rs  test_gpu_stream_priority.rs  test_gpu_strided_copy.rs  test_gpu_sum_dim_backward.rs
ferrotorch-grammar/: Cargo.toml  README.md
ferrotorch-hub/: Cargo.toml  README.md
ferrotorch-hub/src/: auth.rs  cache.rs  discovery.rs  download.rs  hf_config.rs  lib.rs  registry.rs
ferrotorch-hub/tests/: conformance_hub.rs  conformance_surface_coverage.rs  load_pretrained_smoke.rs  pretrained_loading.rs
ferrotorch-jit/: Cargo.toml  README.md
ferrotorch-jit-script/: Cargo.toml  README.md
ferrotorch-jit-script/src/: lib.rs
ferrotorch-llama/: Cargo.toml  README.md
ferrotorch-ml/: Cargo.toml
ferrotorch-mps/: Cargo.toml  README.md
ferrotorch-nn/: Cargo.toml  README.md
ferrotorch-nn-derive/: Cargo.toml  README.md
ferrotorch-optim/: Cargo.toml  README.md
ferrotorch-profiler/: Cargo.toml  README.md
ferrotorch-rl/: Cargo.toml  README.md
ferrotorch-serialize/: Cargo.toml  README.md
ferrotorch-tokenize/: Cargo.toml  README.md
ferrotorch-train/: Cargo.toml  README.md
ferrotorch-vision/: Cargo.toml  README.md
ferrotorch-whisper/: Cargo.toml  README.md
ferrotorch-xpu/: Cargo.toml  README.md
(+3404 files in other folders)
