[workspace]
resolver = "3"
members = [
    "ferrotorch",
    "ferrotorch-core",
    "ferrotorch-nn",
    "ferrotorch-nn-derive",
    "ferrotorch-optim",
    "ferrotorch-data",
    "ferrotorch-train",
    "ferrotorch-vision",
    "ferrotorch-jit",
    "ferrotorch-serialize",
    "ferrotorch-gpu",
    "ferrotorch-distributed",
    "ferrotorch-cubecl",
    "ferrotorch-distributions",
    "ferrotorch-profiler",
    "ferrotorch-hub",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["doll"]
repository = "https://github.com/dollspace-gay/ferrotorch"
homepage = "https://github.com/dollspace-gay/ferrotorch"
keywords = ["deep-learning", "machine-learning", "autograd", "neural-network", "tensor"]
categories = ["science", "mathematics", "algorithms"]

[workspace.dependencies]
# Internal crates (version for crates.io, path for local dev)
ferrotorch-core = { version = "0.1.1", path = "ferrotorch-core" }
ferrotorch-nn = { version = "0.1.1", path = "ferrotorch-nn" }
ferrotorch-nn-derive = { version = "0.1.1", path = "ferrotorch-nn-derive" }
ferrotorch-optim = { version = "0.1.1", path = "ferrotorch-optim" }
ferrotorch-data = { version = "0.1.1", path = "ferrotorch-data" }
ferrotorch-vision = { version = "0.1.1", path = "ferrotorch-vision" }
ferrotorch-jit = { version = "0.1.1", path = "ferrotorch-jit" }
ferrotorch-serialize = { version = "0.1.1", path = "ferrotorch-serialize" }
ferrotorch-gpu = { version = "0.1.1", path = "ferrotorch-gpu" }
ferrotorch-distributed = { version = "0.1.1", path = "ferrotorch-distributed" }
ferrotorch-train = { version = "0.1.1", path = "ferrotorch-train" }
ferrotorch-cubecl = { version = "0.1.1", path = "ferrotorch-cubecl" }
ferrotorch-distributions = { version = "0.1.1", path = "ferrotorch-distributions" }
ferrotorch-profiler = { version = "0.1.1", path = "ferrotorch-profiler" }
ferrotorch-hub = { version = "0.1.1", path = "ferrotorch-hub" }

# ferray ecosystem
ferray-core = { version = "0.2.5", features = ["bf16"] }
ferray-ufunc = "0.2.5"
ferray-linalg = "0.2.5"
ferray-random = "0.2.5"

# CubeCL portable GPU compute
cubecl = "0.10.0-pre.2"
cubecl-cuda = "0.10.0-pre.2"
cubecl-wgpu = "0.10.0-pre.2"
cubecl-hip = "0.10.0-pre.2"

# Core dependencies
thiserror = "2.0"
rayon = "1.11"
half = "2.4"
num-traits = "0.2"
cudarc = { version = "0.19", features = ["cuda-12080", "cublas"] }
image = "0.25"
safetensors = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
rustfft = "6.2"
