[workspace]
resolver = "3"
members = [
    "ferrotorch",
    "ferrotorch-core",
    "ferrotorch-nn",
    "ferrotorch-nn-derive",
    "ferrotorch-optim",
    "ferrotorch-data",
    "ferrotorch-train",
    "ferrotorch-vision",
    "ferrotorch-jit",
    "ferrotorch-serialize",
    "ferrotorch-gpu",
    "ferrotorch-distributed",
    "ferrotorch-cubecl",
    "ferrotorch-xpu",
    "ferrotorch-distributions",
    "ferrotorch-profiler",
    "ferrotorch-hub",
    "ferrotorch-tokenize",
    "ferrotorch-llama",
    "ferrotorch-ml",
    "ferrotorch-jit-script",
    "ferrotorch-mps",
]

[workspace.package]
version = "0.4.7"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["doll"]
repository = "https://github.com/dollspace-gay/ferrotorch"
homepage = "https://github.com/dollspace-gay/ferrotorch"
keywords = ["deep-learning", "machine-learning", "autograd", "neural-network", "tensor"]
categories = ["science", "mathematics", "algorithms"]

[workspace.dependencies]
# Internal crates (version for crates.io, path for local dev)
ferrotorch-core = { version = "0.4.7", path = "ferrotorch-core" }
ferrotorch-nn = { version = "0.4.7", path = "ferrotorch-nn" }
ferrotorch-nn-derive = { version = "0.4.7", path = "ferrotorch-nn-derive" }
ferrotorch-optim = { version = "0.4.7", path = "ferrotorch-optim" }
ferrotorch-data = { version = "0.4.7", path = "ferrotorch-data" }
ferrotorch-vision = { version = "0.4.7", path = "ferrotorch-vision" }
ferrotorch-jit = { version = "0.4.7", path = "ferrotorch-jit" }
ferrotorch-serialize = { version = "0.4.7", path = "ferrotorch-serialize" }
ferrotorch-gpu = { version = "0.4.7", path = "ferrotorch-gpu" }
ferrotorch-distributed = { version = "0.4.7", path = "ferrotorch-distributed" }
ferrotorch-train = { version = "0.4.7", path = "ferrotorch-train" }
ferrotorch-cubecl = { version = "0.4.7", path = "ferrotorch-cubecl" }
ferrotorch-xpu = { version = "0.4.7", path = "ferrotorch-xpu" }
ferrotorch-distributions = { version = "0.4.7", path = "ferrotorch-distributions" }
ferrotorch-profiler = { version = "0.4.7", path = "ferrotorch-profiler" }
ferrotorch-hub = { version = "0.4.7", path = "ferrotorch-hub" }
ferrotorch-tokenize = { version = "0.4.7", path = "ferrotorch-tokenize" }
ferrotorch-llama = { version = "0.4.7", path = "ferrotorch-llama" }
ferrotorch-ml = { version = "0.4.7", path = "ferrotorch-ml" }
ferrotorch-jit-script = { version = "0.4.7", path = "ferrotorch-jit-script" }
ferrotorch-mps = { version = "0.4.7", path = "ferrotorch-mps" }

# ferray ecosystem
ferray-core = { version = "0.3", features = ["bf16"] }
ferray-ufunc = "0.3"
ferray-linalg = "0.3"
ferray-random = "0.3"
ferray-fft = "0.3"
ferray-stride-tricks = "0.3"
ferray-window = "0.3.1"
ferray-ma = "0.3"
ferray-numpy-interop = { version = "0.3", default-features = false }

# CubeCL portable GPU compute
cubecl = "0.10.0-pre.2"
cubecl-cuda = "0.10.0-pre.2"
cubecl-wgpu = "0.10.0-pre.2"
cubecl-hip = "0.10.0-pre.2"

# Core dependencies
thiserror = "2.0"
rayon = "1.11"
half = { version = "2.4", features = ["num-traits", "bytemuck"] }
num-traits = "0.2"
bytemuck = "1"
cudarc = { version = "0.19", features = ["cublas", "cusolver", "cufft"] }
# CUDA toolkit version for cudarc is selected via the CUDARC_CUDA_VERSION env
# var in .cargo/config.toml (default 12080 for WSL compatibility). Adding a
# `cuda-NNNNN` feature here would conflict with the env-driven cfg and produce
# duplicate FFI definitions (cudarc gates each binding on a single version
# feature; activating two collapses the two extern blocks together).
image = "0.25"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
rustfft = "6.2"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
tracing = "0.1"
