[package]
name = "ferrotorch-core"
description = "Core tensor and autograd engine for ferrotorch — PyTorch in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
ferray-linalg = { workspace = true }
ferray-random = { workspace = true }
ferray-fft = { workspace = true }
ferray-stride-tricks = { workspace = true }
ferray-window = { workspace = true }
ferray-ma = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
rustfft = { workspace = true }
faer = "0.24"
rustc-hash = "2"
tracing = { workspace = true }

[dev-dependencies]
