[package]
name = "ferrotorch-core"
description = "Core tensor and autograd engine for ferrotorch — PyTorch in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
# Marker feature that gates the GPU branches of the conformance suite. The
# tests themselves use `#[cfg(feature = "gpu")]` (NOT `#[ignore]`) so that on
# a non-CUDA build the test functions are entirely absent rather than silently
# skipped. The actual GPU backend (cudarc kernels, cuBLAS calls, etc.) is
# wired in via the `[dev-dependencies]` entry on `ferrotorch-gpu` below — that
# is a one-way edge (test-only → ferrotorch-gpu), so it does not create a
# package cycle even though ferrotorch-gpu depends on ferrotorch-core in its
# non-test builds. Cargo deliberately permits dev-dep cycles for this reason.
gpu = []
# Marker feature that gates the P6 cuSPARSELt-only probe
# (`tests/_probe_p6_sparse_matmul_24.rs`). Activating this feature alone
# does NOT enable the cuSPARSELt path in ferrotorch-gpu; pass
# `--features ferrotorch-gpu/cusparselt` (or use `--features cusparselt`
# on the workspace driver crate) to also turn on the live FFI. The
# probe gates on this feature so a default `cargo test --features gpu`
# build still produces a clean test binary.
#
# Marker-only (no inner ref) so `cargo publish` doesn't see a feature
# pointing at a dev-dep — `ferrotorch-gpu` is dev-only here.
cusparselt = []

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
ferray-linalg = { workspace = true }
ferray-random = { workspace = true }
ferray-fft = { workspace = true }
ferray-stride-tricks = { workspace = true }
ferray-window = { workspace = true }
ferray-ma = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
rustfft = { workspace = true }
faer = "0.24"
rustc-hash = "2"
tracing = { workspace = true }

# Conformance suite scaffolding (Phase 2.0 — issue #759):
#   * `syn`/`quote` parse the public surface of `src/lib.rs` (and every module
#     it declares) so `tests/conformance_surface_inventory.rs` can write a
#     deterministic `_surface.json`.
#   * `toml` parses `_surface_exclusions.toml`, the strict-gate allow-list.
#   * `serde`/`serde_json` parse the inventory JSON and the Python-generated
#     fixtures in `tests/conformance/fixtures/`.
# All four are already transitive deps elsewhere in the workspace; adding them
# as dev-deps does not pull a new top-level crate.
[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
toml = "1"
serde = { workspace = true }
serde_json = { workspace = true }
# `ferrotorch-gpu` registers the cudarc backend that `tests/conformance_creation.rs`
# uses under `--features gpu` to exercise `.to(Device::Cuda(0))` and read back
# values for parity assertions. Listed as a dev-dep (not optional, not feature-
# gated at the manifest level) because Cargo permits dev-dep cycles: the
# ferrotorch-gpu→ferrotorch-core edge in normal builds is preserved while this
# test-only ferrotorch-core→ferrotorch-gpu edge does not propagate to the
# package graph. The test code is gated on `cfg(feature = "gpu")` so the
# binary contains no GPU references on non-CUDA builds.
ferrotorch-gpu = { workspace = true }
