[package]
name = "ferrotorch-data"
description = "Data loading, batching, and transforms for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
rayon = { workspace = true }
num-traits = { workspace = true }

# Feature-gated dependencies for Arrow / Polars interop.
# Pulled in only when the `arrow` or `polars` features are enabled.
# Versions pinned to ferray-numpy-interop 0.3.1's transitive deps to
# avoid a duplicate-arrow / duplicate-polars resolution.
ferray-numpy-interop = { workspace = true, optional = true }
arrow = { version = "58", optional = true }
polars = { version = "0.46", default-features = false, features = ["dtype-full"], optional = true }

[features]
default = []
# Tabular data interop. `arrow` enables Apache Arrow conversions; `polars`
# additionally pulls in DataFrame -> Tensor helpers (DataFrames depend on
# Arrow internally, so `polars` implies `arrow`).
arrow = ["dep:arrow", "dep:ferray-numpy-interop", "ferray-numpy-interop/arrow"]
polars = ["arrow", "dep:polars", "ferray-numpy-interop/polars"]
# CUDA-gated tests. Mirrors the ferrotorch-distributions pattern (#1098):
# pulls in `ferrotorch-gpu` as a dev-dep so the CUDA backend can be
# initialised inside `#[cfg(feature = "cuda")]` test modules. The library
# code itself has no CUDA conditional — all device dispatch happens through
# `ferrotorch_core::gpu_dispatch` (transparent at the Tensor API level).
# Usage: cargo test -p ferrotorch-data --features cuda
cuda = ["dep:ferrotorch-gpu"]

[dev-dependencies]
# Conformance suite (Layer 1 surface inventory + Layer 2 fixture loading +
# Layer 4 strict coverage gate). Mirrors the ferrotorch-core pattern.
#   * `syn`/`quote` parse `src/lib.rs` to emit the surface inventory JSON.
#   * `toml` parses `_surface_exclusions.toml`.
#   * `serde`/`serde_json` parse the inventory JSON and Python-generated
#     fixture files.
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
toml = "1"
serde = { workspace = true }
serde_json = { workspace = true }
