[package]
name = "ferrotorch-diffusion"
description = "Stable-Diffusion-family model composition for ferrotorch (Phase B.3: VAE decoder)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-hub = { workspace = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "vae_decode_dump"
path = "examples/vae_decode_dump.rs"

[[example]]
name = "unet_predict_dump"
path = "examples/unet_predict_dump.rs"

[[example]]
name = "unet_probe_dump"
path = "examples/unet_probe_dump.rs"
