[package]
name = "ferrotorch-distributed"
description = "Distributed training for ferrotorch — backends, collectives, and DDP"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
gpu = ["dep:ferrotorch-gpu"]
nccl = ["gpu", "dep:libc"]
# Skeleton flags for the additional backends listed in #459. The crates
# themselves still have the API contracts in place (Gloo/MPI/UCC modules
# always compile); enabling these flags is what turns on the actual FFI
# binding layers, which are not yet implemented and will live in
# follow-ups #459-gloo / #459-mpi / #459-ucc once a CI host with the
# corresponding C library is available.
gloo-backend = []
mpi-backend = []
ucc-backend = []

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
