[package]
name = "ferrotorch-distributions"
description = "Probability distributions for ferrotorch — PyTorch in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
