[package]
name = "ferrotorch-gpu"
description = "CUDA GPU backend for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]

[dependencies]
ferrotorch-core = { workspace = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true
