[package]
name = "ferrotorch-gpu"
description = "CUDA GPU backend for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
# Opt-in cuSPARSELt support for 2:4 structured sparse matmul on Ampere+
# Tensor Cores. Authored against NVIDIA cuSPARSELt
# (https://docs.nvidia.com/cuda/cusparselt). Activating this feature
# pulls in `bindgen` as a build-dep and runs `build.rs` to generate raw
# FFI bindings against `cusparseLt.h`. The cuSPARSELt SDK
# (`cusparseLt.h` + `libcusparseLt.so`) must be installed at build and
# runtime respectively. Default builds do NOT require these to be
# present.
cusparselt = ["cuda", "dep:bindgen"]

[dependencies]
ferrotorch-core = { workspace = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true

[build-dependencies]
# `bindgen` only runs when the `cusparselt` feature is enabled (the
# build script gates every call on `CARGO_FEATURE_CUSPARSELT`). It is
# kept as an optional build-dep so the default workspace build does not
# pull libclang.
bindgen = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = []
