[package]
name = "ferrotorch-hub"
description = "Pretrained model registry, download, and caching for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["http"]
# Enables the blocking HTTP download path (ureq) and SHA-256 verification
# (sha2). Disable this for a no-network build that only loads weights from
# the local cache.
http = ["dep:ureq", "dep:sha2"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
