[package]
name = "ferrotorch-jit-script"
description = "Procedural-macro front end for ferrotorch-jit: #[script] attribute that compiles a Rust function body into a TracedModule"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-jit = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
