[package]
name = "ferrotorch-jit"
description = "Tracing JIT compiler and graph optimizer for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
# Enables NVRTC-based PTX compilation for f64 transcendental kernels
# (#748 / #749). When this feature is off, generate_ptx_source for an f64
# graph that contains exp/log/sqrt/tanh/sigmoid/gelu/silu returns
# Err(JitError::Unsupported) with a message naming the missing feature.
# When the feature is on, the codegen routes the f64 transcendental case
# through NVRTC (which auto-resolves libdevice's __nv_exp/__nv_log/...)
# and returns valid PTX with libdevice math inlined.
cuda = ["dep:cudarc"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
# In-process JIT: lowers LoopIR → cranelift SSA → executable memory pages.
# No subprocess, no shared library on disk, no foreign toolchain at runtime.
cranelift-jit = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-codegen = "0.131"
cranelift-native = "0.131"
# Pure-Rust math intrinsics (exp/log/sin/cos/...) made available to the JIT
# via cranelift's symbol resolution.
libm = "0.2"
# Optional: NVRTC for the f64 transcendental PTX path (#748). Gated behind
# the `cuda` feature so the default `cargo build -p ferrotorch-jit` still
# works on machines without a CUDA toolkit.
cudarc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
