[package]
name = "ferrotorch-jit"
description = "Tracing JIT compiler and graph optimizer for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
# Enables NVRTC-based PTX compilation for f64 transcendental kernels
# (#748 / #749) **and the FusedChain PTX runtime executor**. When this
# feature is off, generate_ptx_source for an f64 graph that contains
# exp/log/sqrt/tanh/sigmoid/gelu/silu returns Err(JitError::Unsupported)
# with a message naming the missing feature, and `apply_fused` on a CUDA
# tensor returns `FerrotorchError::NotImplementedOnCuda`. When the feature
# is on, the codegen routes the f64 transcendental case through NVRTC
# (which auto-resolves libdevice's __nv_exp/__nv_log/...) and returns
# valid PTX with libdevice math inlined, **and `apply_fused` routes CUDA
# inputs through `fusion_gpu::apply_fused_gpu` — FusedChain PTX (f32
# direct + f64 via NVRTC-libdevice) → `ferrotorch-gpu`'s module cache →
# kernel launch on the input's device, returning a device-resident
# Tensor.**
cuda = ["dep:cudarc", "dep:ferrotorch-gpu"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
# In-process JIT: lowers LoopIR → cranelift SSA → executable memory pages.
# No subprocess, no shared library on disk, no foreign toolchain at runtime.
cranelift-jit = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-codegen = "0.131"
cranelift-native = "0.131"
# Pure-Rust math intrinsics (exp/log/sin/cos/...) made available to the JIT
# via cranelift's symbol resolution.
libm = "0.2"
# Optional: NVRTC for the f64 transcendental PTX path (#748) and PTX
# compilation for the FusedChain runtime executor (#1138). Gated behind
# the `cuda` feature so the default `cargo build -p ferrotorch-jit` still
# works on machines without a CUDA toolkit.
cudarc = { workspace = true, optional = true }
# Optional: the CUDA runtime executor for `apply_fused` lives in
# `fusion_gpu` and needs `ferrotorch-gpu`'s `GpuDevice`, `module_cache`,
# and `CudaBuffer` types. Gated behind `cuda` for the same reason as
# cudarc. (#1138)
ferrotorch-gpu = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Real-artifact harness for tracing + AoT compilation parity (#1170).
# The `jit_trace_dump` example loads a pinned MLP from
# `ferrotorch/jit-trace-parity-v1`, runs eager / traced / compiled
# forwards, and dumps each output for the python verifier.
ferrotorch-hub = { workspace = true, features = ["http"] }
ferrotorch-serialize = { workspace = true }

[[example]]
name = "jit_trace_dump"
path = "examples/jit_trace_dump.rs"
