[package]
name = "ferrotorch-llama"
description = "Llama 3 / Meta LLaMA model composition and weight loading for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-hub = { workspace = true }
num-traits = { workspace = true }
