[package]
name = "ferrotorch-llama"
description = "Llama 3 / Meta LLaMA model composition and weight loading for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
cuda = [
    "dep:ferrotorch-gpu",
    "dep:cudarc",
    "dep:half",
    "dep:ferrotorch-cubecl",
    "dep:cubecl",
    "dep:cubecl-cuda",
    "ferrotorch-cubecl/cuda",
]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-serialize = { workspace = true }
ferrotorch-hub = { workspace = true }
ferrotorch-gpu = { workspace = true, optional = true }
ferrotorch-cubecl = { workspace = true, optional = true }
cubecl = { workspace = true, optional = true }
cubecl-cuda = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true, optional = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ferrotorch-tokenize = { workspace = true }
half = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "llama3_8b"
path = "examples/llama3_8b.rs"

[[example]]
name = "llama3_8b_gpu"
path = "examples/llama3_8b_gpu.rs"
required-features = ["cuda"]

[[example]]
name = "llama3_70b_gpu"
path = "examples/llama3_70b_gpu.rs"
required-features = ["cuda"]

[[example]]
name = "prosparse_7b_gpu"
path = "examples/prosparse_7b_gpu.rs"
required-features = ["cuda"]
