[package]
name = "ferrotorch-mps"
description = "Apple Silicon (Metal Performance Shaders) backend skeleton for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ferrotorch-core = { workspace = true }

[dev-dependencies]
