[package]
name = "ferrotorch-nn-derive"
description = "Derive macro for ferrotorch Module trait — auto-generates parameter collection and train/eval boilerplate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# trybuild is a leaf-crate-only dev dependency: only this proc-macro crate
# needs compile-fail snapshot tests for its error paths. Adding it to
# `[workspace.dependencies]` would be unilateral architectural creep for a
# concern unique to this one crate.
[dev-dependencies]
trybuild = "1.0"
